Fixed an issue with desktop when viewing the occupational categories. The positioning when the details for each category was visible was off due to the toggle. Moved a style block from this view into the css files.

--- a/HireRight/Content/sass/_mobile-default.css
+++ b/HireRight/Content/sass/_mobile-default.css
@@ -583,6 +583,9 @@ button[type="submit"] {
   text-align: center;
   font-size: 18pt; }
 
+.informationalDiv {
+  margin-left: 20px; }
+
 /*$site_background: $veryLightBlue;*/
 /*$site_side_background: $darkNavyBlue;*/
 /*$site_highlights_background: $skyBlue;*/
