--- a/HireRight/Content/sass/_positioning.scss
+++ b/HireRight/Content/sass/_positioning.scss
@@ -40,3 +40,7 @@
 .centered {
     @extend %centered;
 }
+
+.informationalDiv {
+    margin-left: 20px;
+}
